fix overflow

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .bg-circle {
-    position: absolute;
+    position: fixed;
     z-index: 0;
 }
 #bg-circle-top {
@@ -28,8 +28,6 @@ body {
 .container-fluid {
     background-color: black;
     color: white;
-    overflow-x: hidden;
-    overflow-y: hidden;
 }
 
 .navbar {
@@ -40,6 +38,9 @@ body {
 
 .page {
     height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .above-circles {
@@ -124,7 +125,7 @@ body {
 }
 
 @media (max-width: 800px) {
-    .container-fluid {
+    .page {
         overflow-y: visible;
     }
     .backdrop {
